@@ -25,4 +25,4 @@ bugtracker.web    = https://github.com/frioux/Syntax-Keyword-Junction/issues
 Test::More = 0.88
 Sub::Exporter::Progressive = 0.001006
 syntax        = 0
-
+Test::Requires = 0.07
